preparing components do receive dynamics forms

--- a/src/app/@core/layout/menu-language/menu-language.component.html
+++ b/src/app/@core/layout/menu-language/menu-language.component.html
@@ -1,6 +1,7 @@
 <button mat-button [matMenuTriggerFor]="matMenuLanguages">
   <span [ngClass]="'flag-icon-' + (actualLanguage | async).icon?.toLowerCase()" class="flag-icon flag-icon-menu"></span>
-  {{  (actualLanguage | async).label }}
+  {{ (actualLanguage | async).label }}
+  <mat-icon class="ml-1">arrow_drop_down</mat-icon>
 </button>
 
 <mat-menu #matMenuLanguages="matMenu">
