--- a/src/app/@core/layout/menu/menu.component.html
+++ b/src/app/@core/layout/menu/menu.component.html
@@ -3,7 +3,7 @@
     <mat-icon class="material-icons">create</mat-icon>
     About us
   </a>
-  <a mat-list-item routerLink="/">Prices</a>
+  <a mat-list-item routerLink="/">Prices Prices Prices Prices </a>
   <a mat-list-item routerLink="/">Start page</a>
   <a mat-list-item routerLink="/">Offer</a>
   <a mat-list-item routerLink="/">Contact</a>
