--- a/src/app/@core/layout/template/template.component.scss
+++ b/src/app/@core/layout/template/template.component.scss
@@ -1,25 +1,11 @@
-// .example-icon {
-//   padding: 0 14px;
-// }
-
-// .example-spacer {
-//   flex: 1 1 auto;
-// }
-
-// .layout-wrapper{
-//   height: 100vw
-// }
-
-// .flex-wrapper{
-//   height: 100vw
-// }
-
-
-
-.example-icon {
-  padding: 0 14px;
-}
-
 .example-spacer {
   flex: 1 1 auto;
+}
+
+.container {
+  padding: 30pt;
+
+  @media only screen and (max-width: 600px) {
+    padding: 15pt;
+  }
 }
