--- a/src/app/appointment/appointment-form/appointment-form.component.html
+++ b/src/app/appointment/appointment-form/appointment-form.component.html
@@ -1,18 +1,19 @@
-<!-- <div class="container" fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center">
-  <div fxFlex="20%">
-    <img mat-card-image class="img" src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/8V46UZCS0V.jpg"/>
-  </div>
-  <div fxFlex="20%">
-    <img mat-card-image class="img" src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/LTLE4QGRVQ.jpg"/>
-  </div>
-  <div fxFlex="20%">
-    <img mat-card-image class="img" src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/R926LU1YEA.jpg"/>
-  </div>
-  <div fxFlex="20%">
-    <img mat-card-image class="img" src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/U9PP3KXXY2.jpg"/>
-  </div>
-</div> -->
+<div class="container">
+  <app-title icon="poll" title="appointment.form.title"></app-title>
 
-<mat-card>Simple card</mat-card>
+  <mat-card>
+    <div fxLayout.xs="column" fxLayout.lg="row" fxLayoutGap="36px">
+      <div fxFlex.lg="30">
+        <mat-form-field>
+          <input matInput placeholder="Input 1">
+        </mat-form-field>
+      </div>
 
-<h1>FORM</h1>
+      <div fxFlex.lg="70">
+        <mat-form-field>
+          <input matInput placeholder="Input">
+        </mat-form-field>
+      </div>
+    </div>
+  </mat-card>
+</div>
