--- a/src/app/appointment/appointment-form/appointment-form.component.scss
+++ b/src/app/appointment/appointment-form/appointment-form.component.scss
@@ -1,15 +1,20 @@
-.img {
-  width: 100%;
-  // margin-bottom: 18%;
-}
-.card-picture {
-  width: 23%;
-  // margin-bottom: 2%;
-}
-.container {
-  min-height: 100%;
-  width: 100%;
-}
-.search-form {
-  width: 90%;
+// .img {
+//   width: 100%;
+//   // margin-bottom: 18%;
+// }
+// .card-picture {
+//   width: 23%;
+//   // margin-bottom: 2%;
+// }
+// .container {
+//   min-height: 100%;
+//   width: 100%;
+// }
+// .search-form {
+//   width: 90%;
+// }
+
+
+mat-form-field {
+  min-width: 100%;
 }
