--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 table {
   width: 100%;
 }
+
+mat-form-field {
+  min-width: 100%;
+}
+
