--- a/src/app/appointment/components/group/group-form/group-form.component.html
+++ b/src/app/appointment/components/group/group-form/group-form.component.html
@@ -1,13 +1,13 @@
-<app-title icon="poll" title="group.form.title"></app-title>
+<app-title icon="poll" [title]="(group && group.id) ? 'group.form.edit' : 'group.form.new'"></app-title>
 
 <form [formGroup]="formGroup" (ngSubmit)="formSubmit()">
   <mat-card>
     <mat-card-content>
-      <div fxLayout.xs="column" fxLayout.lg="row" fxLayoutGap="36px">
+      <div fxLayout.xs="column" fxLayout.lg="row" fxLayoutGap="20px">
         <div fxFlex.lg="50">
           <mat-form-field>
-            <input matInput #group formControlName="group" [maxLength]="200" required type="text" [placeholder]="'group.form.group' | translate" autocomplete="off" />
-            <mat-hint align="end">{{group.value.length}} / {{group.maxLength}}</mat-hint>
+            <input matInput #title formControlName="group" [maxLength]="200" required type="text" [placeholder]="'group.form.group' | translate" autocomplete="off" />
+            <mat-hint align="end">{{title.value.length}} / {{title.maxLength}}</mat-hint>
             <mat-error *ngIf="formGroup.hasError('required',['group'])">{{'form.validation.required' | translate}}</mat-error>
           </mat-form-field>
         </div>
@@ -28,5 +28,3 @@
     </mat-card-actions>
   </mat-card>
 </form>
-
-<pre>{{ formGroup.value | json }}</pre>
