--- a/src/app/appointment/components/group/group-list/group-list.component.html
+++ b/src/app/appointment/components/group/group-list/group-list.component.html
@@ -1,14 +1,17 @@
-<app-title icon="poll" title="group.list.title">
+<app-title icon="poll" [title]="group ? group.group : 'group.list.title'">
   <ng-container *ngIf="!group">
     <button mat-flat-button color="primary" [routerLink]="['../new']">{{ 'app_title.new' | translate }}</button>
   </ng-container>
 
   <ng-container *ngIf="group">
-    <button mat-flat-button color="primary" [routerLink]="['edit']">{{ 'app_title.edit' | translate }}</button>
+    <button mat-flat-button color="primary" [routerLink]="['./edit']">
+      {{ 'app_title.edit' | translate }}
+    </button>
   </ng-container>
 </app-title>
 
 <mat-card>
+  <pre>{{ questions | json }}</pre>
   <!-- <app-table [data]="data" [radio]="true" [columns]="columns" [edit]="true" (editEmitter)="edit($event)" [delete]="true" (deleteEmitter)="delete($event)" [toggle]="true" (toggleEmitter)="toggle($event)">
     <ng-template appTableHeader>
       <th>No.</th>
