--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,34 @@
-<p>login works!</p>
+<form [formGroup]="formGroup" (ngSubmit)="formSubmit()">
+  <mat-card class="login-card">
+    <mat-card-header>
+      <mat-card-title>{{ 'auth.login' | translate }}</mat-card-title>
+    </mat-card-header>
+
+    <mat-card-content>
+      <div fxLayout="column" fxLayoutGap="20px">
+        <div fxFlex="100">
+          <mat-form-field>
+            <input matInput #email formControlName="email" [maxLength]="200" required type="email" [placeholder]="'commom.email' | translate" autocomplete="off" />
+            <mat-hint align="end">{{email.value.length}} / {{email.maxLength}}</mat-hint>
+            <mat-error *ngIf="formGroup.hasError('required',['email'])">{{'form.validation.required' | translate}}</mat-error>
+            <mat-error *ngIf="formGroup.hasError('email',['email'])">{{'form.validation.email' | translate}}</mat-error>
+          </mat-form-field>
+        </div>
+
+        <div fxFlex="100">
+          <mat-form-field>
+            <input matInput #password formControlName="password" [maxLength]="200" required type="password" [placeholder]="'commom.password' | translate" autocomplete="off" />
+            <mat-hint align="end">{{password.value.length}} / {{password.maxLength}}</mat-hint>
+            <mat-error *ngIf="formGroup.hasError('required',['password'])">{{'form.validation.required' | translate}}</mat-error>
+          </mat-form-field>
+        </div>
+      </div>
+    </mat-card-content>
+
+    <mat-card-actions align="end">
+      <button mat-flat-button color="primary">
+        {{ 'form.submit' | translate }}
+      </button>
+    </mat-card-actions>
+  </mat-card>
+</form>
