--- a/src/app/appointment/components/group/group-list/group-list.component.html
+++ b/src/app/appointment/components/group/group-list/group-list.component.html
@@ -1,43 +1,9 @@
 <app-title icon="poll" [title]="group ? group.group : 'group.list.title'">
-  <ng-container *ngIf="!group">
-    <button mat-flat-button color="primary" [routerLink]="['../new']">{{ 'app_title.new' | translate }}</button>
-  </ng-container>
-
-  <ng-container *ngIf="group">
-    <button mat-flat-button color="primary" [routerLink]="['./edit']">
-      {{ 'app_title.edit' | translate }}
-    </button>
-  </ng-container>
+  <button mat-flat-button color="primary" [routerLink]="['../new']">{{ 'app_title.new' | translate }}</button>
 </app-title>
 
 <mat-card>
-  <pre>{{ questions | json }}</pre>
-  <!-- <app-table [data]="data" [radio]="true" [columns]="columns" [edit]="true" (editEmitter)="edit($event)" [delete]="true" (deleteEmitter)="delete($event)" [toggle]="true" (toggleEmitter)="toggle($event)">
-    <ng-template appTableHeader>
-      <th>No.</th>
-      <th>Name</th>
-      <th>Weight</th>
-      <th>Symbol</th>
-    </ng-template>
-
-    <ng-template let-item appTableColumns>
-      <td>
-        {{ item.position }}
-      </td>
-
-      <td>
-        {{ item.name }}
-      </td>
-
-      <td>
-        {{ item.weight }}
-      </td>
-
-      <td>
-        {{ item.symbol }}
-      </td>
-    </ng-template>
-
+  <app-table [data]="groups" [headers]="headers" [radio]="true" [columns]="columns" [edit]="true" (editEmitter)="edit($event)" [delete]="true" (deleteEmitter)="delete($event)" [toggle]="true" (toggleEmitter)="toggle($event)">
     <ng-template appBtnActions>
       <button mat-icon-button color="primary">
         <mat-icon>edit</mat-icon>
@@ -47,5 +13,5 @@
         <mat-icon>close</mat-icon>
       </button>
     </ng-template>
-  </app-table> -->
+  </app-table>
 </mat-card>
