--- a/src/app/helpers/table/table.component.html
+++ b/src/app/helpers/table/table.component.html
@@ -4,8 +4,15 @@
   <ng-container *ngFor="let column of headersLabels">
     <ng-container [matColumnDef]="column">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ column | translate }} </th>
-      <td mat-cell *matCellDef="let element"> {{ element[columnField(column)] }} </td>
+      <td mat-cell *matCellDef="let element"> {{ element[column] }} </td>
     </ng-container>
+  </ng-container>
+
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
+    <td>
+      <ng-container *ngTemplateOutlet="btnActions.templateRef"></ng-container>
+    </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="headersLabels"></tr>
