--- a/src/app/appointment/components/group/group-list/group-list.component.html
+++ b/src/app/appointment/components/group/group-list/group-list.component.html
@@ -17,7 +17,7 @@
         <td>{{ group.group }}</td>
         <td>{{ group.order }}</td>
         <td class="actions">
-          <button type="button" mat-mini-fab color="primary" (click)="edit(group)" matTooltip="{{ 'group.list.tooptip.questions' | translate }}">
+          <button type="button" mat-mini-fab color="primary" (click)="questions(group)" matTooltip="{{ 'group.list.tooptip.questions' | translate }}">
             <mat-icon>format_list_bulleted</mat-icon>
           </button>
 
