--- a/src/app/appointment/components/questions/question-list/question-list.component.html
+++ b/src/app/appointment/components/questions/question-list/question-list.component.html
@@ -1,42 +1,29 @@
-<app-title icon="poll" title="appointment.form.title">
+<app-title icon="format_list_bulleted" title="{{ group.group }}">
   <button mat-flat-button color="primary" [routerLink]="['new']">{{ 'app_title.new' | translate }}</button>
 </app-title>
 
 <mat-card>
-  <!-- <app-table [data]="data" [radio]="true" [columns]="columns" [edit]="true" (editEmitter)="edit($event)" [delete]="true" (deleteEmitter)="delete($event)" [toggle]="true" (toggleEmitter)="toggle($event)">
-    <ng-template appTableHeader>
-      <th>No.</th>
-      <th>Name</th>
-      <th>Weight</th>
-      <th>Symbol</th>
-    </ng-template>
+  <table>
+    <thead>
+      <tr>
+        <th>{{ 'question.title' | translate }}</th>
+        <th class="actions">{{ 'table.actions' | translate }}</th>
+      </tr>
+    </thead>
 
-    <ng-template let-item appTableColumns>
-      <td>
-        {{ item.position }}
-      </td>
+    <tbody>
+      <tr *ngFor="let question of questions">
+        <td>{{ question.question }}</td>
+        <td class="actions">
+          <button type="button" mat-mini-fab color="accent" (click)="edit(question)" matTooltip="{{ 'table.buttons.edit' | translate }}">
+            <mat-icon>edit</mat-icon>
+          </button>
 
-      <td>
-        {{ item.name }}
-      </td>
-
-      <td>
-        {{ item.weight }}
-      </td>
-
-      <td>
-        {{ item.symbol }}
-      </td>
-    </ng-template>
-
-    <ng-template appBtnActions>
-      <button mat-icon-button color="primary">
-        <mat-icon>edit</mat-icon>
-      </button>
-
-      <button mat-icon-button color="primary">
-        <mat-icon>close</mat-icon>
-      </button>
-    </ng-template>
-  </app-table> -->
+          <button type="button" mat-mini-fab color="warn" (click)="delete(question)" matTooltip="{{ 'table.buttons.remove' | translate }}">
+            <mat-icon>close</mat-icon>
+          </button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </mat-card>
