manager questions by group Id

--- a/src/app/appointment/components/group/group-form/group-form.component.html
+++ b/src/app/appointment/components/group/group-form/group-form.component.html
@@ -1,4 +1,4 @@
-<app-title icon="poll" [title]="(group && group.id) ? 'group.form.edit' : 'group.form.new'"></app-title>
+<app-title icon="poll" [title]="group ? 'group.form.edit' : 'group.form.new'"></app-title>
 
 <form [formGroup]="formGroup" (ngSubmit)="formSubmit()">
   <mat-card>
