--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,8 +34,8 @@ table {
             transition: none !important;
             box-shadow: none !important;
 
-            &::last-child() {
-              margin-right: inherit;
+            &::last-child {
+              margin-right: 0 !important;
             }
           }
         }
@@ -55,8 +55,20 @@ mat-card-actions {
   button {
     margin-right: 8px !important;
 
-    &::last-child() {
-      margin-right: inherit;
+    &::last-child {
+      margin-right: 0;
+    }
+  }
+}
+
+
+
+.title-container {
+  button {
+    margin-right: 8px !important;
+
+    &:last-child {
+      margin-right: 0 !important;
     }
   }
 }
