--- a/src/app/appointment/components/group/group-form/group-form.component.html
+++ b/src/app/appointment/components/group/group-form/group-form.component.html
@@ -22,7 +22,7 @@
     </mat-card-content>
 
     <mat-card-actions align="end">
-      <button mat-flat-button [routerLink]="['/','appointment','groups']">
+      <button type="button" mat-flat-button [routerLink]="['/','appointment','groups']">
         {{ 'commom.back' | translate }}
       </button>
 
