--- a/src/app/appointment/components/group/group-list/group-list.component.html
+++ b/src/app/appointment/components/group/group-list/group-list.component.html
@@ -1,4 +1,4 @@
-<app-title icon="poll" [title]="group ? group.group : 'group.list.title'">
+<app-title icon="poll" title="group.list.title">
   <button mat-flat-button color="primary" [routerLink]="['../new']">{{ 'app_title.new' | translate }}</button>
 </app-title>
 
