--- a/src/app/survey/components/survey-form/survey-form.component.html
+++ b/src/app/survey/components/survey-form/survey-form.component.html
@@ -1,5 +1,67 @@
 <app-title icon="library_add_check" title="survey.title"></app-title>
 
+<mat-horizontal-stepper [linear]="isLinear" #stepper>
+  <mat-step [stepControl]="firstFormGroup">
+    <form [formGroup]="firstFormGroup">
+      <ng-template matStepLabel>{{ 'survey.stepper.identificatin.title' | translate }}</ng-template>
+
+      <mat-form-field>
+        <mat-label>{{ 'survey.stepper.identificatin.title' | translate }}</mat-label>
+        <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required>
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>{{ 'survey.stepper.identificatin.title' | translate }}</mat-label>
+        <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required>
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>{{ 'survey.stepper.identificatin.title' | translate }}</mat-label>
+        <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required>
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>{{ 'survey.stepper.identificatin.title' | translate }}</mat-label>
+        <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required>
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>{{ 'survey.stepper.identificatin.title' | translate }}</mat-label>
+        <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required>
+      </mat-form-field>
+
+      <div align="end">
+        <button mat-flat-button color="primary" matStepperNext>Next</button>
+      </div>
+    </form>
+  </mat-step>
+
+  <mat-step [stepControl]="secondFormGroup">
+    <form [formGroup]="secondFormGroup">
+      <ng-template matStepLabel>{{ 'survey.stepper.questions.title' | translate }}</ng-template>
+      <mat-form-field>
+        <mat-label>Address</mat-label>
+        <input matInput formControlName="secondCtrl" placeholder="Ex. 1 Main St, New York, NY" required>
+      </mat-form-field>
+
+      <div align="end">
+        <button mat-button matStepperPrevious>Back</button>
+        <button mat-flat-button color="primary" matStepperNext>Next</button>
+      </div>
+    </form>
+  </mat-step>
+
+  <mat-step>
+    <ng-template matStepLabel>{{ 'survey.stepper.done.title' | translate }}</ng-template>
+    <p>You are now done.</p>
+
+    <div align="end">
+      <button mat-button matStepperPrevious>Back</button>
+      <button mat-button (click)="stepper.reset()">Reset</button>
+    </div>
+  </mat-step>
+</mat-horizontal-stepper>
+
 <!-- <form [formGroup]="formGroup" (ngSubmit)="formSubmit()">
   <mat-card>
     <mat-card-content>
