--- a/src/app/survey/components/survey-form/survey-form.component.html
+++ b/src/app/survey/components/survey-form/survey-form.component.html
@@ -2,53 +2,13 @@
 
 <mat-horizontal-stepper [linear]="isLinear" #stepper>
   <mat-step [stepControl]="firstFormGroup">
-    <form [formGroup]="firstFormGroup">
-      <ng-template matStepLabel>{{ 'survey.stepper.identificatin.title' | translate }}</ng-template>
-
-      <mat-form-field>
-        <mat-label>{{ 'survey.stepper.identificatin.title' | translate }}</mat-label>
-        <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required>
-      </mat-form-field>
-
-      <mat-form-field>
-        <mat-label>{{ 'survey.stepper.identificatin.title' | translate }}</mat-label>
-        <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required>
-      </mat-form-field>
-
-      <mat-form-field>
-        <mat-label>{{ 'survey.stepper.identificatin.title' | translate }}</mat-label>
-        <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required>
-      </mat-form-field>
-
-      <mat-form-field>
-        <mat-label>{{ 'survey.stepper.identificatin.title' | translate }}</mat-label>
-        <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required>
-      </mat-form-field>
-
-      <mat-form-field>
-        <mat-label>{{ 'survey.stepper.identificatin.title' | translate }}</mat-label>
-        <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required>
-      </mat-form-field>
-
-      <div align="end">
-        <button mat-flat-button color="primary" matStepperNext>Next</button>
-      </div>
-    </form>
+    <ng-template matStepLabel>{{ 'survey.stepper.identificatin.title' | translate }}</ng-template>
+    <app-responsible-tabs [formGroup]="firstFormGroup"></app-responsible-tabs>
   </mat-step>
 
   <mat-step [stepControl]="secondFormGroup">
-    <form [formGroup]="secondFormGroup">
-      <ng-template matStepLabel>{{ 'survey.stepper.questions.title' | translate }}</ng-template>
-      <mat-form-field>
-        <mat-label>Address</mat-label>
-        <input matInput formControlName="secondCtrl" placeholder="Ex. 1 Main St, New York, NY" required>
-      </mat-form-field>
-
-      <div align="end">
-        <button mat-button matStepperPrevious>Back</button>
-        <button mat-flat-button color="primary" matStepperNext>Next</button>
-      </div>
-    </form>
+    <ng-template matStepLabel>{{ 'survey.stepper.questions.title' | translate }}</ng-template>
+    <app-questions [formGroup]="secondFormGroup"></app-questions>
   </mat-step>
 
   <mat-step>
