--- a/src/app/survey/components/responsible/responsible.component.html
+++ b/src/app/survey/components/responsible/responsible.component.html
@@ -2,13 +2,13 @@
   <div class="form-stepper" fxLayout.xs="column" fxLayout.lg="row" fxLayoutGap="20px">
     <div fxFlex.lg="50">
       <mat-form-field>
-        <input matInput [placeholder]="'survey.stepper.identificatin.responsible.name' | translate" formControlName="name" required autocomplete="off" >
+        <input matInput [placeholder]="'responsible.identification.name' | translate" formControlName="name" required autocomplete="off" >
       </mat-form-field>
     </div>
 
     <div fxFlex.lg="50">
       <mat-form-field>
-        <mat-select [placeholder]="'survey.stepper.identificatin.responsible.parental_degree' | translate" formControlName="parentalDegree" >
+        <mat-select [placeholder]="'responsible.identification.parental_degree' | translate" formControlName="parentalDegree" >
           <mat-option *ngFor="let p of parentalDegree" [value]="p">
             {{ p }}
           </mat-option>
@@ -18,6 +18,8 @@
   </div>
 
   <div align="end">
-    <button mat-flat-button color="primary" matStepperNext>{{ 'commom.save' | translate }}</button>
+    <!-- <button mat-flat-button color="primary" matStepperNext>{{ 'commom.save' | translate }}</button> -->
+    <button type="button" mat-button matStepperPrevious>{{ 'commom.back' | translate }}</button>
+    <button type="button" mat-flat-button color="primary" matStepperNext>{{ 'commom.next' | translate }}</button>
   </div>
 </form>
