--- a/src/app/survey/components/responsible-tabs/responsible-tabs.component.html
+++ b/src/app/survey/components/responsible-tabs/responsible-tabs.component.html
@@ -3,7 +3,7 @@
     <ng-template mat-tab-label>
       {{ 'responsible.identification.title' | translate }}
     </ng-template>
-    <app-responsible [formGroup]="formGroupResponsible"></app-responsible>
+    <app-responsible [formGroup]="formGroup"></app-responsible>
   </mat-tab>
 
   <mat-tab>
