--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,7 +53,9 @@ mat-form-field {
 
 
 // mat-card-actions
-mat-card-actions {
+.btn-actions {
+  margin-top: 20px;
+
   button {
     margin-right: 8px !important;
 
