saving responsible, patients and contacts

--- a/src/app/survey/components/responsible-tabs/patient/patient.component.html
+++ b/src/app/survey/components/responsible-tabs/patient/patient.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formGroup">
+<div [formGroup]="formGroup">
   <ng-container [formArrayName]="getFormArrayName">
     <div class="form-stepper" fxLayout.xs="column" fxLayout.lg="row" fxLayoutGap="20px" *ngFor="let patient of formPatientArray.controls; let i=index">
       <ng-container [formGroupName]="i">
@@ -22,7 +22,7 @@
 
         <div fxFlex.lg="4" fxFlex.xs="50">
           <button type="button" mat-icon-button (click)="removePatient(i)">
-            <mat-icon>close</mat-icon>
+            <mat-icon>delete_outline</mat-icon>
           </button>
         </div>
       </ng-container>
@@ -41,4 +41,4 @@
       </div>
     </div>
   </ng-container>
-</form>
+</div>
