--- a/src/app/survey/components/responsible-tabs/responsible-tabs.component.html
+++ b/src/app/survey/components/responsible-tabs/responsible-tabs.component.html
@@ -1,24 +1,24 @@
-<ng-container *ngIf="formGroup">
+<form [formGroup]="formGroup" (submit)="formSubmit()">
   <mat-tab-group #matTabGroup dynamicHeight [selectedIndex]="0">
     <mat-tab>
       <ng-template mat-tab-label>
         {{ 'responsible.identification.title' | translate }}
       </ng-template>
-      <app-responsible [formGroup]="formGroup" (tabChange)="selectTabChange($event)"></app-responsible>
+      <app-responsible #appResponsible [formGroup]="formGroup" (tabChange)="selectTabChange($event)"></app-responsible>
     </mat-tab>
 
     <mat-tab>
       <ng-template mat-tab-label>
         {{ 'responsible.patients.title' | translate }}
       </ng-template>
-      <app-patient [formGroup]="formGroup" (tabChange)="selectTabChange($event)"></app-patient>
+      <app-patient #appPatient [formGroup]="formGroup" (tabChange)="selectTabChange($event)"></app-patient>
     </mat-tab>
 
     <mat-tab>
       <ng-template mat-tab-label>
         {{ 'responsible.contacts.title' | translate }}
       </ng-template>
-      <!-- <app-responsible [formGroup]="formGroup"></app-responsible> -->
+      <app-contacts #appContact [formGroup]="formGroup" (tabChange)="selectTabChange($event)" (saveAll)="formSubmit()"></app-contacts>
     </mat-tab>
   </mat-tab-group>
-</ng-container>
+</form>
