--- a/src/app/survey/components/responsible-tabs/responsible/responsible.component.html
+++ b/src/app/survey/components/responsible-tabs/responsible/responsible.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formGroupResponsible" (submit)="formSubmit()">
+<div [formGroup]="formGroupResponsible">
   <div class="form-stepper" fxLayout.xs="column" fxLayout.lg="row" fxLayoutGap="20px">
     <div fxFlex.lg="50">
       <mat-form-field>
@@ -15,6 +15,7 @@
             {{ p }}
           </mat-option>
         </mat-select>
+        <mat-error *ngIf="formGroupResponsible.hasError('required',['parentalDegree'])">{{ 'form.validation.required' | translate }}</mat-error>
       </mat-form-field>
     </div>
   </div>
@@ -22,4 +23,4 @@
   <div class="btn-actions" align="end">
     <button type="button" mat-flat-button color="primary" (click)="tabChange.emit(1)">{{ 'commom.next' | translate }}</button>
   </div>
-</form>
+</div>
