saving question form

--- a/src/app/survey/components/responses/responses.component.html
+++ b/src/app/survey/components/responses/responses.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formGroup" (submit)="formSubmit()">
+<!-- <form [formGroup]="formGroup" (submit)="formSubmit()">
   <div class="form-stepper">
     <div fxLayout="column" fxLayoutGap="20px" *ngFor="let group of groups">
       <h3>{{ group.group }}</h3>
@@ -21,8 +21,7 @@
   </div>
 
   <div align="end">
-    <!-- <button mat-flat-button color="primary" matStepperNext>{{ 'commom.save' | translate }}</button> -->
     <button type="button" mat-button matStepperPrevious>{{ 'commom.back' | translate }}</button>
     <button type="button" mat-flat-button color="primary" matStepperNext>{{ 'commom.next' | translate }}</button>
   </div>
-</form>
+</form> -->
