--- a/src/app/appointment/components/questions/question-form/question-form.component.html
+++ b/src/app/appointment/components/questions/question-form/question-form.component.html
@@ -29,9 +29,10 @@
         {{ 'commom.back' | translate }}
       </button>
 
-      <button mat-flat-button color="primary">
+      <!-- <button mat-flat-button color="primary">
         {{ 'commom.save' | translate }}
-      </button>
+      </button> -->
+      <button type="button" mat-flat-button color="primary" matStepperNext>{{ 'commom.save' | translate }}</button>
     </mat-card-actions>
   </mat-card>
 </form>
