Refactory responsible form

--- a/src/app/@core/layout/template/template.component.scss
+++ b/src/app/@core/layout/template/template.component.scss
@@ -3,7 +3,8 @@
 }
 
 .container {
-  padding: 30pt;
+  padding-left: 30pt;
+  padding-right: 30pt;
 
   @media only screen and (max-width: 600px) {
     padding: 15pt;
