--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,6 +51,18 @@ mat-form-field {
   min-width: 100%;
 }
 
+.right-button {
+  float: right;
+  margin-right: 15px;
+  margin-top: 15px;
+}
+
+.mat-card {
+  border-radius: 20px !important;
+  border: 1px solid #c1c1c191 !important;
+
+}
+
 
 // mat-card-actions
 .btn-actions {
@@ -69,8 +81,13 @@ mat-form-field {
 form {
   .form-stepper {
     margin-top: 25px;
-    margin-bottom: 25px;
+    margin-left: 30px;
+    margin-right: 30px;
   }
+}
+
+.mat-vertical-content-container.mat-stepper-vertical-line {
+  margin-top: 10px;
 }
 
 
